할 일 목록 표시

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
     </form>
   </template>
 
+  <template id="todo-list">
+    <h1>할 일 목록</h1>
+    <ul class="todo-list"></ul>
+  </template>
+
+  <template id="todo-item">
+    <li class="todo-item">
+      <span class="body"></span>
+    </li>
+  </template>
+
+
   <div class="root"></div>
   <script src="./index.js"></script>
 </body>
